# evrcc

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  asmtest.c  evrc_codec.cpp  evrcc.c  evrcc.csharp.i  evrcc.h  evrcpacket.c  evrcpacket.h  gen_csharp  makefile  read.me  stdint_win32.h
code/: a2lsp.c  acb_ex.c  acelp_pf.c  apf.c  auto.c  bitpack.c  bitupack.c  bl_intrp.c  bqiir.c  c3_10pf.c  c8_35pf.c  comacb.c  convh.c  cshift.c  d3_10pf.c  d8_35pf.c  d_fer.c  d_globs.c  d_no_fer.c  d_rate_1.c  decode.c  durbin.c  e_globs.c  encode.c  fcbgq.c  fer.c  filter.c  fndppf.c  getext1k.c  getgain.c  getopt.c  getres.c  globs.c  impulser.c  interpol.c  intr_cos.c  inv_sqrt.c  lpcana.c  lsp2a.c  lspmaq.c  (+17 more)
dsp_arm/: abs_s.s  add.s  c_fft.s  c_fft.s.backup  div_32.s  divide_s.s  dsp_math.c  fft_tabs.s  l_abs.s  l_add.s  l_div.s  l_mac.s  l_mpy_ll.s  l_mpy_ls.s  l_msu.s  l_mult.s  l_negate.s  l_shift_r.s  l_shl.s  l_shr.s  l_shr_r.s  l_sub.s  mac_r.s  msu_r.s  mult.s  mult_r.s  negate.s  norm_l.s  norm_s.s  r_fft.s  round32.s  saturate.s  shift_r.s  shl.s  shr.s  shr_r.s  sub.s  test.s
dsp_fx/: basic_op40.c  basic_op40.h  makefile
dspmath/: ehwutl.c  ehwutl.h  globdefs.c  makefile  mathadv.c  mathadv.h  mathdp31.c  mathdp31.h  mathevrc.c  mathevrc.h  typedefs.h
include/: acelp_pf.h  ansi.h  bqiir.h  coder_ra.h  d_globs.h  decode.h  dsp_math.h  e_globs.h  encode.h  fer.h  getopt.h  globs.h  macro.h  ns127.h  proto.h  qcoder.h  rda.h  rom.h  tty_hdr.h  typedef.h  typedefs.h
include/evrcc/: evrc_export.h  evrcc.h  evrcpacket.h
